feat (color): change colors

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ button {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color: #a065eb;
   color: white;
   text-align: center;
   font-size: 22px;
